--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <source src="assets/bulb.wav" type="audio/mpeg">
     </audio>
 
-    <script src="sc2_script.js"></script>
+    <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </body>
 
